<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top">
            <ImageButton android:id="@+id/delete_entry_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_action_delete"
                android:contentDescription="@string/delete"
                android:background="@null" />

            <EditText
                android:id="@+id/title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/delete_entry_button"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/hint_enter_title"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:textColor="@color/note_list_text"
                android:textColorHint="@color/hint_enter_note"
                android:textSize="@dimen/input_new_note"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:importantForAutofill="no"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_enter_description"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="4"
            android:textColor="@color/note_list_text"
            android:textColorHint="@color/hint_enter_note"
            android:textSize="@dimen/input_new_note"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/group_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:padding="0dp"
            android:textColor="@color/note_list_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ToggleButton
                android:id="@+id/toggleAlarmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/alarm_off_label"
                android:textOn="@string/alarm_on_label" />

            <TextView
                android:id="@+id/alarmDateTextView"
                android:textSize="@dimen/input_new_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/alarmTimeTextView"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/alarmTimeTextView"
                android:textSize="@dimen/input_new_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/toggleAlarmButton"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:visibility="gone"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>