<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <ImageButton
            android:id="@+id/edit_entry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:contentDescription="@string/edit_pencil"
            android:src="@drawable/list_icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/edit_entry_button"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/view_entry_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingBottom="5dp"
                android:background="@android:color/transparent"
                android:autoLink="web"
                android:fontFamily="sans-serif-medium"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:textColor="@color/note_list_text"
                android:textIsSelectable="true"
                android:textSize="@dimen/lbl_new_note_title"
                android:textStyle="normal"
                android:hint="@string/hint_enter_title"
                android:autofillHints="" />

            <View android:layout_height="1dip"
                android:layout_width="fill_parent"
                android:background="#000000"
                android:layout_alignBottom="@id/view_entry_title"/>
        </RelativeLayout>
    </RelativeLayout>

    <EditText
        android:id="@+id/view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:scrollbars="vertical"
        android:textColor="@color/note_list_text"
        android:textIsSelectable="true"
        android:textSize="@dimen/input_new_note"
        android:hint="@string/add_description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/alarmIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/alarm_bell"
            android:background="@null"
            android:src="@drawable/ic_notification_off_grey" />

        <TextView
            android:id="@+id/alarmTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_toEndOf="@id/alarmDateTextView"
            android:textSize="@dimen/input_new_note"
            android:visibility="gone" />

        <TextView
            android:id="@+id/alarmDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_toEndOf="@id/alarmIcon"
            android:textSize="@dimen/input_new_note"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>